syntax = "proto3";

option go_package = "./;auth";

service AuthService {
  rpc SignUp (UserData) returns (SessionId) {}
  rpc LogIn (UserCredentials) returns (SessionId) {}
  rpc LogOut (SessionId) returns (Status) {}
  rpc Auth (SessionId) returns (Status) {}
  rpc UserInfo (SessionId) returns (UserData) {}
}

message UserData {
  string Id = 1;
  string email = 2;
  string password = 3;
  string username = 4;
  string birthDate = 5;
  string Avatar = 6;
}

message UserCredentials {
  string Id = 1;
  string email = 2;
  string password = 3;
  string username = 4;
  string birthDate = 5;
  string Avatar = 6;
}

message SessionId {
  string sessionId = 1;
}

message Status {
  int32 code = 1;
}
